<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btn_manage_scales"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/manage_scales"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"/>

    <Button
        android:id="@+id/btn_manage_styles"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/manage_styles"
        android:layout_below="@id/btn_manage_scales"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"/>

    <Button
        android:id="@+id/btn_manage_areas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/manage_areas"
        android:layout_below="@id/btn_manage_styles"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"/>

    <Button
        android:id="@+id/btn_manage_sectors"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/manage_sectors"
        android:layout_below="@id/btn_manage_areas"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"/>

    <Button
        android:id="@+id/btn_manage_users"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/manage_users"
        android:layout_below="@id/btn_manage_sectors"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"/>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorBottomNavBackground"
        app:menu="@menu/bottom_nav_menu"
        app:itemTextColor="@color/colorBottomNavText"
        app:itemIconTint="@color/colorBottomNavText"/>
</RelativeLayout>
